--- a/Canvas.Executable/Canvas.Executable.csproj
+++ b/Canvas.Executable/Canvas.Executable.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Canvas.Helper\Canvas.Helper.csproj" />
     <ProjectReference Include="..\Canvas.Shapes\Canvas.Shapes.csproj" />
   </ItemGroup>
